fixed spacing on the boxes of panel 2.

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ h3 {
 .panel-two {
     display: flex;
     flex-direction: column;
+    height: 500px;
 }
 
 .vert-content {
@@ -87,6 +88,7 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin: auto;
+    margin-top: -20px;
     gap: 50px;
 }
 .box {
